2006-02-03  Aaron Bockover  <aaron@aaronbock.net>

	* src/banshee.exe.config.in:
	* src/Banshee.Base/Banshee.Base.dll.config.in:
	* src/Banshee.Widgets/Banshee.Widgets.dll.config.in: Added libX11 map;
	fixes strange GtkUIManager crashes in NLD
	
2006-02-02  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Require GTK+-2.8

	* src/PlayerInterface.cs: Removed custom pixbuf stuff for the search
	entry; it handles its own icon and hover icon now

	* src/Banshee.Widgets/Makefile.am: Added -unsafe to compile; removed
	resource icons

	* src/Banshee.Widgets/SearchEntry.cs: Use Stock.Find as the icon and
	color shift it for the hover icon

	* src/Banshee.Widgets/Resources: Removed

	* ChangeLog: Fixed formatting on Fredrik's last entry (spaces->tabs)

2006-02-01  Fredrik Hedberg <fredrik@avafan.com>

	* banshee.pc.in: Added gconf-sharp-2.0 as a requirement for
	our pkg-config file, as many plugins most certainly will use gconf.

	* src/Banshee.Base/SourceManager.cs: Call Deactivate() on the
	current source when the user switches to a new one.

	* src/Banshee.Base/Source.cs: Add the empty virtual method Deactivate.

2006-01-31  Aaron Bockover  <aaron@aaronbock.net>

	* src/AboutBox.cs: Class renamed to BansheeAboutDialog, which now
	extends Gtk.AboutDialog; no more Gnome.About support as Gtk# 2.8 is 
	required now; updated copyright; added Ruben Vermeersch

	* src/PlayerInterface.cs (OnAboutAction): Updated to reflect change
	from AboutBox to BansheeAboutDialog

	* src/Banshee.Widgets/VolumeButton.cs: Turned the +/- icons into
	buttons that allow click and hold to adjust the volume (Ruben 
	Vermeersch, BGO #329360); removed the +/- icons and replaced with
	text

2006-01-31  Aaron Bockover  <aaron@aaronbock.net>

	* src/PlayerInterface.cs: Use search icon for the search entry from the
	theme; do not respond to search if the source is to handle it

	* src/Banshee.Base/Globals.cs: Added InterfaceElements.SearchEntry
