@@ -1,5 +1,11 @@
 2006-02-03  Aaron Bockover  <aaron@aaronbock.net>
 
+	* src/Banshee.Plugins/Daap/DaapSource.cs: Catch an exception that
+	DAAP.Client.Login may throw and present an error dialog instead;
+	a 'this is the best I can do' response to the RB DAAP bug #329812
+
+2006-02-03  Aaron Bockover  <aaron@aaronbock.net>
+
 	* src/banshee.exe.config.in:
 	* src/Banshee.Base/Banshee.Base.dll.config.in:
 	* src/Banshee.Widgets/Banshee.Widgets.dll.config.in: Added libX11 map;
